--- a/src/Ignis66/vistas/PruebaFormularioBombero.form
+++ b/src/Ignis66/vistas/PruebaFormularioBombero.form
@@ -105,8 +105,10 @@
                           <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jcbSexo" min="-2" pref="250" max="-2" attributes="0"/>
-                          <Component id="jtfCelular" alignment="0" min="-2" pref="249" max="-2" attributes="0"/>
-                          <Component id="jdcFechaNac" min="-2" pref="249" max="-2" attributes="0"/>
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jdcFechaNac" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jtfCelular" alignment="0" pref="249" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -248,19 +250,24 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jdcFechaNac" min="-2" pref="24" max="-2" attributes="0"/>
-                          <Component id="jlErrorFecha" min="-2" pref="24" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jlErrorFecha" min="-2" pref="24" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jdcFechaNac" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                       <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jtfCelular" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                           <Component id="jlErrorCelular" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="40" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jLabel22" min="-2" pref="8" max="-2" attributes="0"/>
@@ -288,9 +295,9 @@
                           <Component id="jtfCorreo" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                           <Component id="jlErrorCorreo" alignment="3" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
               </Group>
+              <EmptySpace min="40" pref="40" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jbSalir" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                   <Component id="jbLimpiar" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
@@ -596,8 +603,6 @@
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfFijoKeyReleased"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfFijoKeyTyped"/>
       </Events>
-    </Component>
-    <Component class="com.toedter.calendar.JDateChooser" name="jdcFechaNac">
     </Component>
     <Component class="javax.swing.JComboBox" name="jcbEstado">
       <Properties>
@@ -920,6 +925,8 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Especialidad *"/>
       </Properties>
+    </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jdcFechaNac">
     </Component>
   </SubComponents>
 </Form>
